poll.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poll-deployment
  namespace: default
  labels:
    app: poll
spec:
  replicas: 2
  selector:
    matchLabels:
      app: poll
  template:
    metadata:
      name: poll-deployment
      labels:
        app: poll
    spec:
      restartPolicy: Always
      containers:
        - name: poll
          image: epitechcontent/t-dop-600-poll:k8s
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: 128Mi

      # Schedule pods on different nodes
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - poll
              topologyKey: kubernetes.io/hostname
