result.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result-deployment
  namespace: default
  labels:
    app: result
spec:
  replicas: 2
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      name: result-deployment
      labels:
        app: result
    spec:
      restartPolicy: Always
      containers:
        - name: result
          image: epitechcontent/t-dop-600-result:k8s
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: 128M

      # Schedule pods on different nodes
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - poll
              topologyKey: kubernetes.io/hostname
