traefik.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-deployment
  namespace: kube-public
  labels:
    app: traefik
spec:
  replicas: 2
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      name: traefik-deploment
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-service-account
      restartPolicy: Always
      containers:
        - name: traefik
          image: traefik:1.7
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
            - name: dashboard
              containerPort: 8080
          args:
            - --api
            - --logLevel=INFO
            - "--entryPoints='Name:http Address::80 '"

      # Schedule pods on different nodes
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - traefik
              topologyKey: kubernetes.io/hostname
