poll.ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: result-ingress
  namespace: default
spec:
  rules:
    - host: poll.dop.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: poll-service
              servicePort: 80
